<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleNews">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/pal_news"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="25sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:tabTextColor="@color/design_default_color_on_secondary"
        app:tabSelectedTextColor="#03A9F4"
        app:tabIndicatorColor="#03A9F4"
        app:tabIndicatorHeight="3.5dp"
        android:layout_marginTop="0dp"
        app:tabMode="scrollable"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:layout_below="@+id/titleNews">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            />


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/category"
        android:layout_marginTop="10dp"/>

</RelativeLayout>